--- a/Click Button Effect/click.html
+++ b/Click Button Effect/click.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Click Button Effect</title>
     <link rel="stylesheet" href="./click.css">
 </head>
+
 <body>
-    <button class="button">Click Me</button>
+    <button class="button">
+        Click Me
+    </button>
 </body>
+
 </html>
